# AudioProcessorMod

./: CMakeLists.txt  README.md
audio/input/: test2.aiff
include/: AudioFileHandler.h  AudioProcessingStrategy.h  AudioProcessingStrategyFactory.h  AudioProcessor.h  AudioProcessorFactory.h  AudioReverbStrategy.h  AudioReverseStrategy.h  ChangeAudioSpeedStrategy.h  ChangeAudioVolumeStrategy.h  Drum.h  DrumIdentifier.cpp  DrumIdentifier.h  ExtractAudioChunksStrategy.h  FFTProcessor.cpp  FFTProcessor.h  FFTProcessorMod.h  FFTProcessor_old.h  FilterFrequencyRangeStrategy.h  GuitarIdentifier.cpp  GuitarIdentifier.h  Identifier.cpp  Identifier.h  InstrumentFactory.h  SignalProcessor.cpp  SignalProcessor.h  Utils.h  WaveAudioFileHandler.h  WaveAudioProcessor.h  identify.h
src/: DrumIdentifier.cpp  FFTProcessor.cpp  FFTProcessorMod.cpp  FFTProcessor_old.cpp  GuitarIdentifier.cpp  Identifier.cpp  InstrumentFactory.cpp  Settings.cpp  SignalProcessor.cpp  main.cpp  main2.cpp
tests/: AudioFileHandlerFactoryTest.cpp  CMakeLists.txt  UtilsTest.cpp  WaveAudioFileHandlerTest.cpp  WaveAudioProcessorTest.cpp
